# nexmod

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  install.sh  nexmod.py  nexmod_mcp.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml  publish.yml
docs/: index.html
tests/: conftest.py  test_cli.py  test_collections.py  test_darktide_actions.py  test_doctor_and_dryrun.py  test_download.py  test_extract.py  test_file_selection.py  test_fsck.py  test_import.py  test_load_order.py  test_missing_deps.py  test_network_resilience.py  test_nxm.py  test_profiles.py  test_reconciler.py  test_resolve_mod_dir_interactive.py  test_rollback.py  test_safety.py  test_search.py  test_setup_wizard.py  test_steam.py  test_url_parsing.py  test_version_normalization.py  test_vortex.py
tests/integration/: test_full_flows.py
tests/smoke/: test_api.py
